Changed CSS positions to fixed so that the overlay covers the entire viewport while scrolling.

--- a/overlay.css
+++ b/overlay.css
@@ -7,25 +7,25 @@
 /* OVERLAY STYLES (in conjunction with js/overlay.js) */
 #lt_overlay {
     display: none;
-    position: absolute;
+    position: fixed;
     top: 0%;
     left: 0%;
     width: 100%;
     height: 100%;
     background-color: black;
-    z-index:1001;
+    z-index: 1001;
     -moz-opacity: 0.6;
-    opacity:.60;
+    opacity: .60;
     filter: alpha(opacity=60);
 }
 
 #lt_loading {
     display: none;
-    position: absolute;
+    position: fixed;
     color: #ccc;
     top: 30%;
     left: 40%;
     padding: 20px;
-    z-index:1002;
+    z-index: 1002;
     overflow: auto;
 }
